- Refactored `getFirst()` to `get(0)`. - Tests were checked.